<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bmi"
        android:name="com.example.myapplication.ui.bmi.BmiFragment"
        android:label="@string/title_bmi"
        tools:layout="@layout/fragment_bmi" />

    <fragment
        android:id="@+id/navigation_kcal"
        android:name="com.example.myapplication.ui.notifications.KcalFragment"
        android:label="@string/title_kcal"
        tools:layout="@layout/fragment_kcal" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.myapplication.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.myapplication.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_game"
        android:name="com.example.myapplication.ui.game.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game" />

</navigation>